update the last changes

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         </nav>
         <div class="my-images">
             <img src="./images/myimage.jpeg" alt="">
+            <div class="name">
+                <h1 >AKHROR MIRFAYIZEV</h1>
+                <H2>Full Stack Web Developer</H2>
+            </div>
+            
         </div>
         
     </header>
