commiting new changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="my-images">
             <img src="./images/myimage.jpeg" alt="">
             <div class="name">
-                <h1 >AKHROR MIRFAYIZEV</h1>
+                <h1 >AKHROR MIRFAYZIEV</h1>
                 <H2>Full Stack Web Developer</H2>
             </div>
             
